<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/old_account_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_extra_large"
        android:paddingRight="@dimen/margin_extra_large"
        tools:context="com.sopeapp.login.CreateAccountActivity">


        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:paddingTop="10dp"
            android:src="@drawable/sope_icon" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@drawable/login_top_bar"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_extra_large"
                android:paddingTop="@dimen/margin_extra_large"
                android:paddingRight="@dimen/margin_extra_large"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/old_account_username_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_extra_large"
                android:paddingRight="@dimen/margin_extra_large"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/old_account_email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_extra_large"
                android:paddingRight="@dimen/margin_extra_large"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/old_account_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/login_login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/old_account_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_shape"
                android:text="@string/login_login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginRight="@dimen/margin_extra_large"
                />


        </LinearLayout>
    </LinearLayout>
</ScrollView>
